AD&D 2E Revised/2EStyle.css
/* ... */
.sheet-centering-padding-5 {
    padding-left: 5px;
    padding-right: 5px;
}

.sheet-padding-right {
    padding-right: 5px;
}

.sheet-table-white {
    color: #FFF;
    font-family: Arial,
    sans-serif; font-weight: bold;
}

.sheet-note {
    line-height:1em;
    font-family: Arial, sans-serif;
    font-size:.8125rem;
    font-weight: bold;
    color: #000;
}

.sheet-flex .repcontainer,
.sheet-flex-wrap .repcontainer {
    display: flex;
}

.sheet-flex-wrap .repcontainer {
    flex-wrap: wrap;
    justify-content: space-around;
}

.sheet-flex-item {
}

label input[type="radio"],
label input[type="checkbox"] {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    left: 0;
    top: 0;
    margin: 0;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

td, 
th {
    text-align: inherit;
    padding-left: inherit;
}

.sheet-collapse {
    visibility: collapse;
}

div.repcontainer div.repitem:first-child tr.sheet-show-first,
div.repcontainer div.repitem:first-child th.sheet-show-first,
div.repcontainer div.repitem:first-child thead.sheet-show-first {
    visibility: visible;
}

.sheet-show-spell-hack {
    position: relative;
    top: -9px;
}

.sheet-spell-effect {
    width: 555px;
}

input.sheet-show-spell-details:checked ~ .sheet-spell-effect {
    width: 620px;
}

/* Announcement styling start */
.sheet-spell-points-wiz,
.sheet-spell-points-pri,
.sheet-spell-details,
.sheet-announcement { 
    display: none;
}

input.sheet-show-spell-points-wiz:checked ~ .sheet-spell-points-wiz,
input.sheet-show-spell-points-pri:checked ~ .sheet-spell-points-pri,
input.sheet-show-spell-details:checked ~ .sheet-spell-details,
input.sheet-show-announcement:checked ~ .sheet-announcement
{
    display: block;
}

div.sheet-announcement {
    width: 95%;
    margin: 5px;
    border: 3px solid #ff0000;
    border-radius: 8px;
    padding: 8px;
    background: #ababab;
    box-sizing: border-box;
}

.sheet-selectable {
    font-style: italic;
    font-weight: bold;
    color: #181E72;
    -webkit-user-select: all;  /* Chrome all / Safari all */
    -moz-user-select: all;     /* Firefox all */
    -ms-user-select: all;      /* IE 10+ */
    user-select: all;          /* Likely future */
}
/* Announcement styling end */

